syntax = "proto3";

package auth;
option go_package = "github.com/ben-toogood/kite/auth";
import "google/protobuf/timestamp.proto";

service AuthService {
  // Login sends an access token to the user via email
  rpc Login(LoginRequest) returns (LoginResponse);
  // Refresh an access token
  rpc Refesh(RefeshRequest) returns (RefeshResponse);
  // Revoke the access tokens for a user
  rpc Revoke(RevokeRequest) returns (RevokeResponse);
  // Inspect an access token
  rpc Inspect(InspectRequest) returns (InspectResponse);
}

message Token {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp access_token_expiry = 3;
  google.protobuf.Timestamp refresh_token_expiry = 4;
}

message RefeshRequest {
  string refresh_token = 1;
}

message RefeshResponse {
  Token token = 1;
}

message RevokeRequest {
  string user_id = 1;
}

message RevokeResponse {}

message InspectRequest {
  string access_token = 1;
}

message InspectResponse {
  string user_id = 1;
}

message LoginRequest {
  string user_id = 1;
  string email = 2;
}

message LoginResponse {}